testsuite/tests/rename/should_compile/GADTNullaryRecordRecordWildcard.hs
{-# LANGUAGE GADTSyntax #-}
{-# LANGUAGE RecordWildCards #-}

module GADTNullaryRecordRecordWildcard where

data X a where
  X :: {} -> X a

f X {..} = ()
